config/uiplugins/components/troubleshooting-panel/korrel8r/korrel8r-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: korrel8r
  labels:
    app.kubernetes.io/instance: korrel8r
    app.kubernetes.io/managed-by: observability-operator
    app.kubernetes.io/part-of: UIPlugin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: korrel8r
      app.kubernetes.io/managed-by: observability-operator
      app.kubernetes.io/part-of: UIPlugin
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: korrel8r
        app.kubernetes.io/managed-by: observability-operator
        app.kubernetes.io/part-of: UIPlugin
    spec:
      serviceAccountName: troubleshooting-panel
      containers:
        - name: korrel8r
          image: korrel8r:latest
          command:
            - korrel8r
            - web
            - "--https=:9443"
            - "--cert=/secrets/tls.crt"
            - "--key=/secrets/tls.key"
            - "--config=/config/korrel8r.yaml"
          ports:
            - containerPort: 9443
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: serving-cert
              readOnly: true
              mountPath: /secrets/
            - name: korrel8r-config
              readOnly: true
              mountPath: /config/
      volumes:
        - name: serving-cert
          secret:
            secretName: korrel8r
            defaultMode: 420
        - name: korrel8r-config
          configMap:
            name: korrel8r
