config/uiplugins/components/troubleshooting-panel/korrel8r/korrel8r-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: korrel8r
  labels:
    app.kubernetes.io/instance: korrel8r
    app.kubernetes.io/managed-by: observability-operator
    app.kubernetes.io/part-of: UIPlugin
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: korrel8r
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: korrel8r
    app.kubernetes.io/managed-by: observability-operator
    app.kubernetes.io/part-of: UIPlugin
  ports:
    - name: web
      port: 9443
      protocol: TCP
      targetPort: 9443
