config/uiplugins/components/troubleshooting-panel/korrel8r/korrel8r-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: korrel8r
spec:
  to:
    kind: Service
    name: korrel8r
  port:
    targetPort: web
  tls:
    termination: reencrypt
